@@ -143,7 +143,8 @@ function browseActions(view, item, args, count) {
                               weight:100});
             }
             if (undefined!=args['path'] && args['path'].length>0 && !queryParams.party && !LMS_KIOSK_MODE) {
-                actions.push({localfiles:true, title:i18n('Local files'), icon:'insert_drive_file', do:{ command:['musicartistinfo', 'localfiles', 'folder:'+args['path']], params:[]}, weight:102});
+                actions.push({localartwork:true, title:i18n('Local artwork'), icon:'insert_photo', do:{ command:['musicartistinfo', 'localartwork', 'folder:'+args['path']], params:[]}, weight:102});
+                actions.push({localfiles:true, title:i18n('Local files'), icon:'insert_drive_file', do:{ command:['musicartistinfo', 'localfiles', 'folder:'+args['path']], params:[]}, weight:103});
             }
         }
         if (lmsOptions.youTubePlugin && undefined!=args['artist']) {
@@ -397,11 +398,23 @@ function browseHandleListResponse(view, item, command, resp, prevPage, appendIte
                 view.currentActions.push({albumRating:true, title:i18n("Set rating for all tracks"), icon:"stars", weight:101});
             }
             if (lmsOptions.infoPlugin && undefined!=actParams['path'] && actParams['path'].length>0 && !queryParams.party && !LMS_KIOSK_MODE) {
-                // Check we have some localfiles, if not hide entry!
+                // Check we have some local files, if not hide entry!
                 lmsCommand('', ['musicartistinfo', 'localfiles', 'folder:'+actParams['path']]).then(({data}) => {
-                    if (!data || !data.result || !data.result.item_loop) {
+                    if (!data || !data.result || !data.result.item_loop || data.result.item_loop.length<1) {
                         for (var i=0, loop=view.currentActions, len=loop.length; i<len; ++i) {
                             if (loop[i].localfiles) {
+                                loop.splice(i, 1);
+                                break;
+                            }
+                        }
+                    }
+                }).catch(err => {
+                });
+                // Check we have some local artwork, if not hide entry!
+                lmsCommand('', ['musicartistinfo', 'localartwork', 'folder:'+actParams['path']]).then(({data}) => {
+                    if (!data || !data.result || !data.result.item_loop || data.result.item_loop.length<1) {
+                        for (var i=0, loop=view.currentActions, len=loop.length; i<len; ++i) {
+                            if (loop[i].localartwork) {
                                 loop.splice(i, 1);
                                 break;
                             }
