@@ -1,6 +1,7 @@
 3.5.0
 -----
 1. Add setting to toggle rounded covers.
+2. Add 'Local artwork' entry to album track list menu.
 
 3.4.4
 -----
